@@ -6,6 +6,8 @@
 	- updated dependencies in the makefile.
 	- document trust-anchor-signaling in example config file.
 	- updated configure, dependencies and flex output.
+	- better module memory lookup, fix of unbound-control shm names for
+	  module memory printout of statistics.
 
 12 May 2017: Wouter
 	- Adjust servfail by iterator to not store in cache when serve-expired
